--- a/app/Views/Articles/index.html
+++ b/app/Views/Articles/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<a href="/articles/create">Create new Article</a>
+
+<a href="/logout" methods="get">Logout</a>
+
 <html>
-<h1>Articles</h1>
 
+<a href="/articles/create"><h3>Create new Article</h3></a>
+<div style="
+    text-align: left;
+    background: #afc79d;
+    padding: 10px;
+    border-radius: 25px;
+    margin-left: 50px;
+    margin-right: 1200px;
+    ">
+    <h1 style="padding-left: 35px">Articles</h1>
 
-<body style="text-align: center">
 <ul id="navigation">
     {% for article in articles %}
-    <li><a href="articles/{{ article.id }}">{{ article.title }}</a></li>
-    <form style="padding: 5px" method="post" onclick="return confirm('Are you sure?')" action="/articles/{{ article.id}}/delete">
+    <h3><a href="articles/{{ article.id }}">{{ article.title }}</a><form
+            style="padding: 5px" method="post"
+            onclick="return confirm('Are you sure?')"
+            action="/articles/{{ article.id}}/delete">
         <button type="submit">Remove</button>
-    </form>
+    </form></h3>
+
     {% endfor %}
+
 </ul>
 
+</div>
 
 </body>
 </html>
