--- a/app/Views/Users/login.html
+++ b/app/Views/Users/login.html
@@ -5,6 +5,9 @@
     <title>Social Portal</title>
 </head>
 <body>
+<div>
+    Dont Have Account? Register <a href="/register">Here</a>
+</div>
 <form action="login/true" method="post">
 
     <input type="text" name="emailLogin" placeholder="E-mail">
