--- a/app/Views/Users/register.html
+++ b/app/Views/Users/register.html
@@ -5,6 +5,11 @@
     <title>Social Portal</title>
 </head>
 <body>
+<div>
+    Have Account? Log in <a href="/login">Here</a>
+</div>
+
+
 <form action="/register/true" method="post">
     <input type="text" name="name" placeholder="Name">
     <br>
