--- a/app/Views/Users/login.html
+++ b/app/Views/Users/login.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Social Portal</title>
-</head>
-<body>
-<div>
-    Dont Have Account? Register <a href="/register">Here</a>
-</div>
-<form action="login/true" method="post">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <input type="text" name="emailLogin" placeholder="E-mail">
-    <br>
-    <input type="password" name="pwdLogin" placeholder="Password">
-    <br>
-    <button type="submit" name="submit">LOG IN</button>
-</form>
+</head>
+
+</head>
+
+<body class="text-center";>
+
+<main class="form-signin">
+    <div style="display: flex; align-items: center; justify-content: center; min-height: 80vh">
+    <form action="login/true" method="post">
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+        <div class="form-floating">
+            <input type="email" name="emailLogin" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" name="pwdLogin" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
+        </div>
+
+        <div class="checkbox mb-3">
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" style="margin-bottom: 10px" type="submit">Sign in</button>
+        <a href="/register" type="submit">Register Here</a>
+        <p class="mt-5 mb-3 text-muted">&copy; I have small pe pee : 2017–2021</p>
+    </form>
+        <div style="display: flex; align-items: center; justify-content: center; min-height: 80vh">
+
+        </div>
+    </div>
+</main>
+
+
+
 </body>
 </html>
