--- a/app/Views/Users/register.html
+++ b/app/Views/Users/register.html
@@ -1,27 +1,88 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Social Portal</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div>-->
+<!--    Have Account? Log in <a href="/login">Here</a>-->
+<!--</div>-->
+
+
+<!--<form action="/register/true" method="post">-->
+<!--    <input type="text" name="name" placeholder="Name">-->
+<!--    <br>-->
+<!--    <input type="text" name="surname" placeholder="Surname">-->
+<!--    <br>-->
+<!--    <input type="password" name="pwd" placeholder="Password">-->
+<!--    <br>-->
+<!--    <input type="password" name="pwdRepeat" placeholder="Repeat password">-->
+<!--    <br>-->
+<!--    <input type="text" name="email" placeholder="E-mail">-->
+<!--    <br>-->
+<!--    <button type="submit" name="submit">SIGN UP</button>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Social Portal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </head>
-<body>
-<div>
-    Have Account? Log in <a href="/login">Here</a>
-</div>
+
+</head>
+
+<body class="text-center";>
+
+<main class="form-signin">
+    <div style="display: flex; align-items: center; justify-content: center; min-height: 80vh">
+        <form action="/register/true" method="post">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+            <div class="form-floating">
+                <input type="text" name="name" class="form-control" id="name" placeholder="Name">
+                <label for="name">Name</label>
+            </div>
+            <div class="form-floating">
+                <input type="text" name="surname" class="form-control" id="surname" placeholder="Surname">
+                <label for="surname">Surname</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" name="pwd" class="form-control" id="pwd" placeholder="Password">
+                <label for="pwd">Password</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" name="pwdRepeat" class="form-control" id="pwdRepeat" placeholder="Password Repeat">
+                <label for="pwdRepeat">Password Repeat</label>
+            </div>
+            <div class="form-floating">
+                <input type="email" name="email" class="form-control" id="email" placeholder="user@gmail.com">
+                <label for="email">E-mail address</label>
+            </div>
 
 
-<form action="/register/true" method="post">
-    <input type="text" name="name" placeholder="Name">
-    <br>
-    <input type="text" name="surname" placeholder="Surname">
-    <br>
-    <input type="password" name="pwd" placeholder="Password">
-    <br>
-    <input type="password" name="pwdRepeat" placeholder="Repeat password">
-    <br>
-    <input type="text" name="email" placeholder="E-mail">
-    <br>
-    <button type="submit" name="submit">SIGN UP</button>
-</form>
+
+
+            <div class="checkbox mb-3">
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" style="margin-bottom: 10px" type="submit">Register</button>
+            <a href="/login" type="submit">Login</a>
+            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        </form>
+        <div style="display: flex; align-items: center; justify-content: center; min-height: 80vh">
+
+        </div>
+    </div>
+</main>
+
+
+
 </body>
 </html>
