--- a/app/Views/Users/register.html
+++ b/app/Views/Users/register.html
@@ -1,31 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Social Portal</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div>-->
-<!--    Have Account? Log in <a href="/login">Here</a>-->
-<!--</div>-->
-
-
-<!--<form action="/register/true" method="post">-->
-<!--    <input type="text" name="name" placeholder="Name">-->
-<!--    <br>-->
-<!--    <input type="text" name="surname" placeholder="Surname">-->
-<!--    <br>-->
-<!--    <input type="password" name="pwd" placeholder="Password">-->
-<!--    <br>-->
-<!--    <input type="password" name="pwdRepeat" placeholder="Repeat password">-->
-<!--    <br>-->
-<!--    <input type="text" name="email" placeholder="E-mail">-->
-<!--    <br>-->
-<!--    <button type="submit" name="submit">SIGN UP</button>-->
-<!--</form>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +16,7 @@
 <main class="form-signin">
     <div style="display: flex; align-items: center; justify-content: center; min-height: 80vh">
         <form action="/register/true" method="post">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 fw-normal">Register here</h1>
 
             <div class="form-floating">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Name">
