--- a/app/Views/Articles/index.html
+++ b/app/Views/Articles/index.html
@@ -1,34 +1,84 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 
+
+
+
+<!doctype html>
+<html lang="en">
+Hi {{session.name}} <br>
 <a href="/logout" methods="get">Logout</a>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.88.1">
+    <title>Sidebars · Bootstrap v5.1</title>
 
-<html>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sidebars/">
 
-<a href="/articles/create"><h3>Create new Article</h3></a>
-<div style="
-    text-align: left;
-    background: #afc79d;
-    padding: 10px;
-    border-radius: 25px;
-    margin-left: 50px;
-    margin-right: 1200px;
-    ">
-    <h1 style="padding-left: 35px">Articles</h1>
 
-<ul id="navigation">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+        li {
+            padding: 5px
+        }
+    </style>
+
+</head>
+
+    <link href="sidebars.css" rel="stylesheet">
+
+    <div class="container">
+        <header class="d-flex justify-content-center py-3">
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="/articles" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="/articles" class="nav-link active">Articles</a></li>
+                <li class="nav-item"><a href="/articles/create" class="nav-link active">Create new Article</a></li>
+                <li class="nav-item"><a href="/articles" class="nav-link active">Users</a></li>
+            </ul>
+        </header>
+    </div>
+
+<div style="background: rgb(74,130,182); padding-bottom: 3px"></div>
+<body>
+
+
+
+<div class="list-group">
     {% for article in articles %}
-    <h3><a href="articles/{{ article.id }}">{{ article.title }}</a><form
-            style="padding: 5px" method="post"
-            onclick="return confirm('Are you sure?')"
-            action="/articles/{{ article.id}}/delete">
-        <button type="submit">Remove</button>
-    </form></h3>
-
+    <a href="articles/{{ article.id }}" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+        <div class="d-flex gap-2 w-100 justify-content-between">
+            <div>
+                <h6 class="mb-0">{{article.title}}</h6>
+                <p class="mb-0 opacity-75">By {{article.name}} {{ article.surname }}</p>
+            </div>
+            <small class="opacity-50 text-nowrap">{{article.createdAt}}</small>
+        </div>
+        <form
+                method="post"
+                onclick="return confirm('Are you sure?')"
+                action="/articles/{{ article.id}}/delete">
+            <button type="submit">Remove</button>
+        </form>
+    </a>
     {% endfor %}
-
-</ul>
-
 </div>
 
 </body>
-</html>
