--- a/app/Views/Articles/show.html
+++ b/app/Views/Articles/show.html
@@ -1,49 +1,160 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 
 
-<html>
+<!--<html>-->
 
 
-<body style="text-align: left">
-<a href="/articles">Back</a>
+<!--<body style="text-align: left">-->
+<!--<a href="/articles">Back</a>-->
+
+<!--<div style="text-align: center">-->
+<!--    <h1>{{ article.title }}</h1>-->
+<!--    <h4>{{ article.createdAt }}</h4><a href="/articles/{{ article.id}}/edit">Edit</a>-->
+<!--</div>-->
+
+<!--<div style="-->
+<!--    text-align: center;-->
+<!--    background: #afc79d;-->
+<!--    padding: 20px;-->
+<!--    border-radius: 25px;-->
+<!--    margin-left: 700px;-->
+<!--    margin-right: 700px;-->
+
+<!--    ">-->
+<!--    {{ article.description }}-->
+<!--</div>-->
+
+<!--<div>-->
+<!--   <h2>Comments</h2>-->
+<!--    <form action="/articles/{{article.id}}/comment" method="post">-->
+<!--        <textarea name="comment">-->
+
+<!--        </textarea>-->
+<!--        <button type="submit">Comment</button>-->
+<!--    </form>-->
+
+<!--        {% for comment in comments %}-->
+<!--        <div style="margin: 10px; border: 2px solid green; padding: 5px">-->
+
+<!--            {{ comment.name }} {{ comment.surname}} : <br><br>-->
+<!--            {{ comment.comment}}-->
+<!--            <h5>{{ comment.createdAt }}</h5>-->
+<!--        </div>-->
+<!--        {% endfor %}-->
+<!--    -->
+<!--</div>-->
+
+
+
+<!--</body>-->
+<!--</html>-->
+
+
+<!doctype html>
+<html lang="en">
+Hi {{session.name}} <br>
+<a href="/articles" methods="get">Back</a>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.88.1">
+    <title>Sidebars · Bootstrap v5.1</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sidebars/">
+
+
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+        li {
+            padding: 5px
+        }
+    </style>
+
+</head>
+
+<link href="sidebars.css" rel="stylesheet">
+
+<div class="container">
+    <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/articles" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/articles" class="nav-link active">Articles</a></li>
+            <li class="nav-item"><a href="/articles/create" class="nav-link active">Create new Article</a></li>
+            <li class="nav-item"><a href="/articles" class="nav-link active">Users</a></li>
+        </ul>
+    </header>
+</div>
+
+
+<body>
+<div style="background: rgb(74,130,182); padding-bottom: 3px"></div>
 
 <div style="text-align: center">
-    <h1>{{ article.title }}</h1><h4>{{ article.createdAt }}</h4><a href="/articles/{{ article.id}}/edit">Edit</a>
+    <h1>{{ article.title }}</h1>
+    <h4>{{ article.createdAt }}</h4><a href="/articles/{{ article.id}}/edit">Edit</a>
 </div>
 
 <div style="
-    text-align: center;
-    background: #afc79d;
-    padding: 20px;
-    border-radius: 25px;
-    margin-left: 700px;
-    margin-right: 700px;
-
+    height: 400px;
+  width: 35%;
+  background: #bcc9bc;
+  padding: 10px;
+  margin: auto;
+  border-radius: 10px;
     ">
     {{ article.description }}
 </div>
-<div>
-   <h2>Comments</h2>
-    <form action="/articles/{{article.id}}/comment" method="post">
-        <textarea name="comment">
 
-        </textarea>
-        <button type="submit">Comment</button>
-    </form>
+<div style="padding-left: 30px">
+    <h1>Comments</h1>
+        <form action="/articles/{{article.id}}/comment" method="post">
+            <textarea name="comment">
 
-        {% for comment in comments %}
-        <div style="margin: 10px; border: 2px solid green; padding: 5px">
-
-            {{ comment.name }} {{ comment.surname}} : <br><br>
-            {{ comment.comment}}
-            <h5>{{comment.time}}</h5>
-        </div>
-        {% endfor %}
-
-
+            </textarea>
+            <button type="submit">Comment</button>
+        </form>
 </div>
 
+<div style="background: rgb(74,130,182); padding-bottom: 3px; margin-top: 10px"></div>
+<div class="list-group">
 
+    {% for comment in comments %}
+    <a href="" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+        <div class="d-flex gap-2 w-100 justify-content-between">
+            <div>
+                <h6 class="mb-0">{{ comment.comment }}</h6>
+                <p class="mb-0 opacity-75">soon</p>
+            </div>
+            <small class="opacity-50 text-nowrap">{{comment.createdAt}}</small>
+        </div>
+<!--        <form-->
+<!--                method="post"-->
+<!--                onclick="return confirm('Are you sure?')"-->
+<!--                action="/articles/{{ article.id}}/delete">-->
+<!--            <button type="submit">Remove</button>-->
+<!--        </form>-->
+    </a>
+    {% endfor %}
+</div>
 
 </body>
-</html>
+<div style="margin-bottom: 100px"></div>;
